--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,17 @@
-Products index
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h1> Products index</h1>
+      <% @products.each do |product| %>
+        <li> Name: <%= product.name %> </li>
+        <li> Description: <%= product.description %> </li>
+        <li> Age_group: <%= product.age_group %> </li>
+        <li> Price: $<%= product.price %> </li>
+        <li> Stock quantity: <%= product.stock_quantity %> </li>
+        <br>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
