--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <%= link_to destroy_user_session_path, method: :delete do%>
+    <span class='glyphicon glyphicon-log-in'></span>Log Out
+    <% end %>
     <%= yield %>
   </body>
 </html>
