--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <h1> Products index</h1>
       <% @products.each do |product| %>
-        <li> Name: <%= product.name %> </li>
+        <div><%= link_to product.name, product_path(product.id) %></div>
         <li> Description: <%= product.description %> </li>
         <li> Age_group: <%= product.age_group %> </li>
         <li> Price: $<%= product.price %> </li>
