--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,14 @@
-Product show
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Product show</h1>
+        <div><%= @product.name %></div>
+        <br>
+        <li> Description: <%= @product.description %> </li>
+        <li> Age_group: <%= @product.age_group %> </li>
+        <li> Price: $<%= @product.price %> </li>
+        <li> Stock quantity: <%= @product.stock_quantity %> </li>
+        <%= link_to "Back", :back %>
+    </div>
+  </div>
+</div>
