--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-6">
       <%= render partial: "product" %>
       <div class="btn btn-block"><%= link_to "Back", :back %></div>
+      <%= link_to "Add Item", my_cart_cart_list_index_path %>
     </div>
   </div>
 </div>
