--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <%= render partial: "product" %>
-      <%= link_to "Back", :back %>
+      <%= render partial: "products/product" %>
     </div>
   </div>
 </div>
