--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h2>New Product</h2>
+      <h2>Update Product</h2>
       <% if @product.errors.present?%>
         <ul>
           <% @product.errors.each do |error, message|%>
