--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
       <%= render partial: "product" %>
-      <%= link_to "Back", :back %>
+      <div class="btn btn-block"><%= link_to "Back", :back %></div>
     </div>
   </div>
 </div>
