--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <% elsif current_user.is_admin == false %>
             <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
-            <li><%= link_to 'Sopping Cart', my_cart_path %></li>
+            <li><%= link_to 'Shopping Cart', my_cart_path %></li>
           <% else %>
             <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
