--- a/app/views/my/carts/show.html.erb
+++ b/app/views/my/carts/show.html.erb
@@ -2,13 +2,12 @@
   <div class="row">
     <div class="col-md-6">
       <h1> Cart </h1>
-
-      <ul>
-        <% @cartlist.each do |list| %>
+        <ol>
+          <% @cartlist.each do |list| %>
           <% @product = Product.find(list.product_id) %>
-          <li><%= @product.name %></li>
-        <% end %>
-      </ul>
+          <li><%= @product.name %>  <%= list.purchase_quantity %></li>
+          <% end %>
+        </ol>
       <%= link_to "Back", :back %>
     </div>
   </div>
