--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,18 +2,17 @@
   <div class="row">
     <div class="col-md-6">
       <%= render partial: "product" %>
-      <div class="btn btn-block"><%= link_to "Back", :back %></div>
-      <%= link_to "Back", :back %>
-      <div class="form-group">
-        <label for="sel1">Select Quantity:</label>
-        <select class="form-control" id="sel1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-        </select>
-      </div>
-      <%= button_to "Add to Cart", my_cart_cart_lists_path(product_id: @product.id) %>
+        <%= form_for [:my_cart, @cartlist] do |f| %>
+          <table>
+              <tr>
+                <td><%= f.label :purchase_quantity %></td>
+                <td><%= f.select :purchase_quantity, ['1','2','3','4'] %></td>
+                <td><%= f.hidden_field :product_id, value: @product.id %></td>
+              </tr>
+          </table>
+          <%= f.submit "Add to Cart" %>
+          <%= link_to "Back", root_path %>
+        <% end %>
     </div>
   </div>
 </div>
