--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-10">
       <%= render partial: "products/product" %>
+      <div class="btn btn-block"><%= link_to "Back", :back %></div>
     </div>
   </div>
 </div>
