--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <% if user_signed_in? == false %>
             <li><%= link_to 'Sign up', new_user_registration_path%></li>
             <li><%= link_to 'Sign in', new_user_session_path %></li>
+            <li><%= link_to 'Shopping Cart', my_cart_path %></li>
           <% elsif current_user.is_admin == false %>
             <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
