--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,10 +11,12 @@
             <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             <li><%= link_to 'Shopping Cart', my_cart_path %></li>
+            <li><%= link_to 'My Orders', my_orders_path %></li>            
           <% else %>
             <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             <li><%= link_to 'New product', new_admin_product_path %></li>
+            <li><%= link_to 'All Orders', admin_orders_path %></li>              
           <% end %>
         </ul>
       </div>
