--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
           <%= f.submit "Add to Cart" %>
         <% end %>
         <br>
-        <%= link_to "Back", root_path %>
+        <%= link_to "Back", :back %>
         <br><br>
     </div>
   </div>
