--- a/app/views/order_mailer/sample.html.erb
+++ b/app/views/order_mailer/sample.html.erb
@@ -1,5 +1,8 @@
-<p>Welcome <%= @email %>to Baby Toys online store!</p>
+<p>Sample</p>
 
 <p>You can confirm your account email through the link below:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>
+  <%= @Greeting %> find me in app/views/order_mailer/sample.html.erb
+</p>
