--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h2> Products list</h2>
+    <div class="col-xs-12 col-offset-1">
+      <h2 id="toys_list"> Toys List </h2>
       <br>
       <% @products.each do |product| %>
-        <div class="col-md-4">
+        <div id="toys", class="col-xs-12 col-sm-6 col-md-4">
           <% if user_signed_in? && current_user.is_admin %>
             <%= link_to admin_product_path(product) do %>
               <% if product.product_images.empty? %>
@@ -14,7 +14,7 @@
                 <%= image_tag image.image_url, class:"product_image_index" %>
               <% end %>
             <% end %>
-            <div><%= link_to product.name, admin_product_path(product.id) %></div>          
+            <div><%= link_to product.name, admin_product_path(product.id) %></div>
           <% else %>
             <%= link_to product_path(product) do %>
               <% if product.product_images.empty? %>
