--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -14,7 +14,7 @@
           <label for = "amount">
             <span class = "input-label">Amount</span>
             <div class = "input-wrapper amount-wrapper">
-              <input id = "amount" name = "amount" type = "tel" min = "1" placeholder="Amount" value = <%= @order_value %>>
+              <input id = "amount" name = "amount" type = "tel" min = "1" placeholder="Amount" value = <%= @order_value %> size = <%="#{@order_value.to_s.length - 3}"%> readonly>
             </div>
           </label>
 
@@ -22,9 +22,9 @@
             <div id="bt-dropin"></div>
           </div>
         </section>
-
-        <input type="hidden" id="nonce" name="payment_method_nonce" />
-        <button class="button" type="submit"><span>Make Payment</span></button>
+        
+        <input type = "hidden" id="nonce" name = "payment_method_nonce" />
+        <button class = "button" type = "submit"><span>Make Payment</span></button>
       <% end %>
 
     </div>
