--- a/app/views/my/carts/show.html.erb
+++ b/app/views/my/carts/show.html.erb
@@ -27,7 +27,7 @@
               <% end %>
             </tbody>
             <tr>
-              <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= @cart_value %></td>
+              <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= "%.2f" % @cart_value %></td>
             </tr>  
           </table>
       </div>
