--- a/app/views/my/orders/new.html.erb
+++ b/app/views/my/orders/new.html.erb
@@ -25,7 +25,7 @@
             <% end %>
           </tbody> 
           <tr>
-            <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= @order_value %></td>
+            <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= "%.2f" % @order_value %></td>
           </tr>             
         </table>
       </div>
