--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -22,7 +22,7 @@
             <div id="bt-dropin"></div>
           </div>
         </section>
-        
+        <input type = "hidden" name = "order_id" value = "<%= @order.id %>" />        
         <input type = "hidden" id="nonce" name = "payment_method_nonce" />
         <button class = "button" type = "submit"><span>Make Payment</span></button>
       <% end %>
