--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,14 +15,19 @@
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
 
-        <!-- <div class="field form-group">
+        <div class="field form-group">
           <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
           <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
           <% if @minimum_password_length %>
             <br />
             <em><%= @minimum_password_length %> characters minimum</em>
           <% end %>
-        </div> -->
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
 
         <div class="field form-group">
           <%= f.label :last_name %><br />
@@ -39,10 +44,10 @@
           <%= f.telephone_field :telephone, class: "form-control" %>
         </div>
 
-        <!-- <div class="field form-group">
+        <div class="field form-group">
           <%= f.label :password_confirmation %><br />
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-        </div> -->
+        </div>
 
         <div class="field form-group">
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
