--- a/app/views/my/orders/new.html.erb
+++ b/app/views/my/orders/new.html.erb
@@ -23,12 +23,18 @@
               </tr>
               <% @order_value += @product_value %>
             <% end %>
-          </tbody> 
+          </tbody>
           <tr>
             <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= "%.2f" % @order_value %></td>
-          </tr>             
+          </tr>
         </table>
       </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">Default Address</div>
+          <table class="table">
+            <td><%= @user.address %></td>
+          </table>
+        </div>
       <div>
         <%= link_to "Confirm order", my_orders_path, method: :post, class:"btn btn-primary" %>
         <%= link_to "Edit order", my_cart_path, class:"btn btn-primary" %>
