--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
       <h2>Update Product</h2>
       <% if @product.errors.present?%>
         <ul>
@@ -9,7 +9,7 @@
           <% end %>
         </ul>
       <% end%>
-      <div class="form_container">
+      <div id="form">
         <%= render partial: "form", product: @product %>
       </div>
       <br>
