--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">Order List</div>
         <table class="table">
@@ -13,7 +13,7 @@
           <tbody>
             <% @ordered_products.each do |ordered_item| %>
               <% @product = Product.find(ordered_item.product_id) %>
-              <% @product_value = (@product.price * ordered_item.purchase_quantity) %>                
+              <% @product_value = (@product.price * ordered_item.purchase_quantity) %>
               <tr>
                 <td><%= @product.name %></td>
                 <td>S$<%= @product.price %></td>
@@ -21,12 +21,12 @@
                 <td>S$<%= @product_value %></td>
               </tr>
             <% end %>
-          </tbody> 
+          </tbody>
           <tfoot>
             <tr>
               <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= @order_value %></td>
             </tr>
-          </tfoot>      
+          </tfoot>
         </table>
       </div>
       <%= form_for [:admin, @order] do |f| %>
@@ -48,4 +48,4 @@
       <br>
     </div>
   </div>
-</div> 
+</div>
