--- a/app/views/admin/orders/user_orders.html.erb
+++ b/app/views/admin/orders/user_orders.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3">
       <div class="panel panel-default">
         <% @orders.where(user_id: params[:user_id]).each do |order| %>
         <div class="panel-heading"><%= "#{order.user.first_name}'s orders" %></div>
