--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 product">
       <%= render partial: "products/product" %>
       <div><%= link_to "Back", :back %></div>
       <br><br>
@@ -22,7 +22,7 @@
                 <td><%= order.status %></td>
               </tr>
             <% end %>
-          </tbody>  
+          </tbody>
         </table>
       </div>
     </div>
