--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-xs-6 col-xs-offset-2 col-md-4 col-md-offset-3">
 
       <h2>Sign up</h2>
 
