--- a/app/views/my/carts/show.html.erb
+++ b/app/views/my/carts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">My Cart</div>
           <table class="table">
@@ -28,7 +28,7 @@
             </tbody>
             <tr>
               <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= "%.2f" % @cart_value %></td>
-            </tr>  
+            </tr>
           </table>
       </div>
       <%= link_to "Checkout", new_my_order_path, class:"btn btn-primary btn-block" %>
