--- a/app/views/my/orders/index.html.erb
+++ b/app/views/my/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">My Orders</div>
         <table class="table">
@@ -17,7 +17,7 @@
                 <td><%= order.status.capitalize %></td>
               </tr>
             <% end %>
-          </tbody>  
+          </tbody>
         </table>
       </div>
       <%= link_to "Home", root_path %>
