--- a/app/views/my/orders/new.html.erb
+++ b/app/views/my/orders/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-6 col-xs-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">Order List</div>
         <table class="table">
