--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 product">
       <%= render partial: "product" %>
         <%= form_for [:my_cart, @cartlist] do |f| %>
           <table>
