--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="clearfix">
-  <nav id="banner", class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <nav id="banner", class="navbar navbar-light" style="background-color: #ad9669;">
     <div class="container">
       <div class="header-left">
         <%= link_to "Baby Toys", root_path, class: "navbar-brand" %>
