--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
       <br>
-    <% @products.each do |product| %>
+    <% @products.reverse.each do |product| %>
       <div class="col-xs-12 col-sm-6 col-lg-4">
          <div class = "shop-card">
            <% if user_signed_in? && current_user.is_admin %>
