--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-xs-offset-2 col-md-4 col-md-offset-3">
-      <!-- <h2>Edit <%= resource_name.to_s.humanize %></h2> -->
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
@@ -57,9 +57,9 @@
         <div class="actions form-group">
           <%= f.submit "Update", class: "btn btn-primary btn-block" %>
         </div>
-        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary btn-block" %>
-        <%= link_to "Back", :back %>
       <% end %>
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary btn-block" %>
+      <%= link_to "Back", :back %>
     </div>
   </div>
 </div>
