--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-6 col-xs-offset-3">
+    <div class="col-xs-6">
+      <%= link_to "Home", root_path %>
       <div class="panel panel-default">
         <div class="panel-heading">All Orders</div>
         <table class="table">
@@ -22,7 +23,12 @@
           </tbody>
         </table>
       </div>
-      <%= link_to "Home", root_path %>
+    </div>
+    <div class="col-xs-6">
+      <h1>
+        Chart
+      </h1>
+      <%= column_chart @product_sales, colors: ["#e4ee6e", "#666"], xtitle: "Product", ytitle: "Purchases" %>
     </div>
   </div>
 </div>
