--- a/app/views/my/orders/index.html.erb
+++ b/app/views/my/orders/index.html.erb
@@ -13,7 +13,7 @@
             <% @orders.each do |order| %>
               <tr>
                 <td><%= link_to "#{order.id}", my_order_path(order) %></td>
-                <td>S$<%= order.order_value %></td>
+                <td>S$<%= "%.2f" % order.order_value %></td>
                 <td><%= order.status.capitalize %></td>
               </tr>
             <% end %>
