--- a/app/views/my/orders/show.html.erb
+++ b/app/views/my/orders/show.html.erb
@@ -21,12 +21,12 @@
                   <td><%= @product.name %></td>
                   <td>S$<%= @product.price %></td>
                   <td><%= ordered_item.purchase_quantity %></td>
-                  <td>S$<%= @product_value %></td>
+                  <td>S$<%= "%.2f" % @product_value %></td>
                 </tr>
               <% end %>
             </tbody>
             <tr>
-              <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= @order.order_value %></td>
+              <td colspan="1"></td><td colspan="2">Grandtotal:</td><td>S$<%= "%.2f" % @order.order_value %></td>
             </tr>
           </table>
       </div>
