--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -16,7 +16,7 @@
               <tr>
                 <td><%= link_to order.user.first_name, user_orders_path(order.user.id) %></td>
                 <td><%= link_to "#{order.id}", admin_order_path(order) %></td>
-                <td>S$<%= order.order_value %></td>
+                <td>S$<%= "%.2f" % order.order_value %></td>
                 <td><%= order.status %></td>
               </tr>
             <% end %>
