--- a/app/views/admin/orders/user_orders.html.erb
+++ b/app/views/admin/orders/user_orders.html.erb
@@ -14,7 +14,7 @@
           <% @orders.where(user_id: params[:user_id]).each do |order| %>
             <tr>
               <td><%= link_to "#{order.id}", admin_order_path(order) %></td>
-              <td>S$<%= order.order_value %></td>
+              <td>S$<%= "%.2f" % order.order_value %></td>
               <td><%= order.status %></td>
             </tr>
           <% end %>
