--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -18,7 +18,7 @@
             <% @orders.order(:status).reverse.each do |order| %>
               <tr>
                 <td><%= link_to "#{order.id}", admin_order_path(order) %></td>
-                <td>S$<%= order.order_value %></td>
+                <td>S$<%= "%.2f" % order.order_value %></td>
                 <td><%= order.status %></td>
               </tr>
             <% end %>
