--- a/app/views/my/carts/show.html.erb
+++ b/app/views/my/carts/show.html.erb
@@ -20,7 +20,7 @@
                   <td><%= @product.name %></td>
                   <td>S$<%= @product.price %></td>
                   <td><%= cartlist.purchase_quantity %></td>
-                  <td>S$<%= @product_value %></td>
+                  <td>S$<%= "%.2f" % @product_value %></td>
                   <td><%= link_to "Delete item", my_cart_cart_list_path(cartlist), method: :delete, data:{ confirm: "Are you sure?" } %></td>
                 </tr>
                 <% @cart_value += @product_value %>
